# api-rest-rust

./: Cargo.toml
src/: intl_message.rs  main.rs
src/database/: mongo.rs
src/models/: match_model.rs  mod.rs  user.rs
src/routes/: matchs.rs  mod.rs  ping.rs  user.rs  users.rs
src/structs/: api_response.rs  common.rs  mod.rs
src/tests/: mod.rs  user_test.rs  users_test.rs
src/tests/endpoint/: mod.rs  user_test.rs
